[gd_scene load_steps=15 format=3 uid="uid://bl1uwr3aycbua"]

[ext_resource type="Script" path="res://Scripts/follower.gd" id="1_jvuiu"]
[ext_resource type="Texture2D" uid="uid://v71oqhamo6og" path="res://Assets/EvenStrongerNormalGuy/EvenStrongerNormalGuy/RageTransformation.png" id="2_yhb7v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b63cf"]
radius = 360.612

[sub_resource type="CircleShape2D" id="CircleShape2D_ljj02"]
radius = 46.3897

[sub_resource type="Animation" id="Animation_lhp52"]
resource_name = "Transform"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_fpspb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jkryo"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6os3"]
_data = {
"RESET": SubResource("Animation_fpspb"),
"Transform": SubResource("Animation_lhp52"),
"idle": SubResource("Animation_jkryo")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_044h6"]
animation = &"Transform"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_12ix5"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ek8dw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3qsk5"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2hg8f"]
states/Start/position = Vector2(184, 106)
states/Transform/node = SubResource("AnimationNodeAnimation_044h6")
states/Transform/position = Vector2(610, 77)
states/idle/node = SubResource("AnimationNodeAnimation_12ix5")
states/idle/position = Vector2(426, 44)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_ek8dw"), "idle", "Transform", SubResource("AnimationNodeStateMachineTransition_3qsk5")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_g81rs"]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_jvuiu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -13)
scale = Vector2(2, 2)
texture = ExtResource("2_yhb7v")
hframes = 4
vframes = 5

[node name="target_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="target_detection"]
shape = SubResource("CircleShape2D_b63cf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.683, -3.845)
scale = Vector2(0.479, 0.479)
shape = SubResource("CircleShape2D_ljj02")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e6os3")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_2hg8f")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_g81rs")

[connection signal="body_entered" from="target_detection" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="target_detection" to="." method="_on_area_2d_body_exited"]
